# alcove

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/alcove-doc-sync/: SKILL.md
.agents/skills/alcove-smoke/: SKILL.md
.agents/skills/alcove-smoke/agents/: openai.yaml
.claude/: settings.json
.claude/agents/: smoke-eval-runner.md
.claude/commands/: eval-ai.md  smoke-real-home.md  smoke-real-integrations.md  smoke.md
.claude/rules/: docs-alignment.md
.codex/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  gitleaks.yml  pages.yml  project-health.yml
docs/: README.md  architecture.md  automations.md  coverage.md  data-and-backup.md  entry-modes.md  modules.md  okf-profile.md  prompts.md  radars.md  read-write-model.md  usage.md  workspaces.md
docs/adr/: 0001-alcove-home-and-managed-kb.md  0002-cli-and-mcp-adapters-use-application.md  0003-link-uses-runtime-search-scope.md  0004-link-direct-index-lookup.md  0005-application-private-capability-groups.md  0006-mcp-adapter-invocation-context.md  0007-external-index-refresh-and-fetch.md
docs/archive/: 2026-07-07-alcove-design.md  README.md
docs/design/: 2026-07-07-alcove-design.md
docs/evals/: agent-ai-eval-guardrails.md  agent-quality-gates.md  ai-review.schema.json  local-smoke.md
docs/superpowers/plans/: 2026-07-11-blog-monitor-plan.md  2026-07-11-blog-playwright-monitor-plan.md  2026-07-11-blog-telegram-summary-plan.md  2026-07-12-apple-notes-module-publishers.md  2026-07-12-apple-notes-publisher.md  2026-07-12-apple-notes-readable-layout.md  2026-07-12-configurable-radar-plan.md
docs/superpowers/specs/: 2026-07-12-apple-notes-publisher-design.md  2026-07-12-configurable-radar-design.md
frontend/dashboard/: index.html  package-lock.json  package.json
frontend/dashboard/public/: site.webmanifest
frontend/dashboard/src/: events.test.ts  events.ts  main.ts  router.ts  search.test.ts  search.ts  snapshot.ts
frontend/dashboard/src/components/: date.test.ts  date.ts  empty-state.ts  layout.ts  module-card.ts  pin-card.ts  text.ts  timeline.ts
frontend/dashboard/src/styles/: layout.css  tokens.css  views.css
frontend/dashboard/src/views/: activity.ts  home.test.ts  home.ts  knowledge.test.ts  knowledge.ts  library.test.ts  library.ts  pins.ts  radars.test.ts  radars.ts  sources.ts  tasks.test.ts  tasks.ts  usage.ts
scripts/: agent-quality-gate.sh  check-docs-drift.sh  check.sh  eval-ai.sh  install-git-hooks.sh  smoke-agent-clients.sh  smoke-dashboard-browser.sh  smoke-export-restore.sh  smoke-mcp-matrix.sh  smoke-messy-inbox.sh  smoke-radar-reports.sh  smoke-real-home.sh  smoke-real-integrations.sh  smoke.sh
scripts/verify/: audit-dashboard-data.py  check.sh  eval-ai.sh  smoke-agent-clients.sh  smoke-dashboard-browser.sh  smoke-export-restore.sh  smoke-isolated.sh  smoke-mcp-matrix.sh  smoke-messy-inbox.sh  smoke-radar-reports.sh  smoke-real-home.sh  smoke-real-integrations.sh
site/: index.html
src/alcove/: __main__.py  agent_quality_gate.py  agent_targets.py  agent_workspaces.py  ai_eval.py  ai_eval_connectors.py  ai_eval_mcp.py  ai_eval_packet.py  ai_summary.py  application.py  application_base.py  application_capabilities.py  application_external.py  application_global_home.py  application_global_ideas.py  application_global_planner.py  application_global_prompts.py  application_global_routines.py  application_global_tasks.py  application_inbox.py  application_knowledge.py  application_search.py  application_system.py  automations.py  blog_capture.py  blog_discovery.py  blog_monitor.py  blog_notifications.py  blog_run.py  capability_payloads.py  classify.py  cli.py  cli_dashboard.py  cli_export.py  cli_external.py  cli_global_home.py  cli_io.py  cli_managed_kb.py  cli_operations.py  cli_planner.py  (+97 more)
src/alcove/connectors/: __init__.py  apple_notes.py  chrome_bookmarks.py  fetch.py  github_stars.py  okf_index.py
src/alcove/profile_templates/hub/skills/alcove-hub/: SKILL.md
src/alcove/profile_templates/managed-kb/claude-commands/: inbox-peek.md  into-kb.md
src/alcove/profile_templates/managed-kb/skills/alcove-capture/: SKILL.md
src/alcove/profile_templates/managed-kb/skills/alcove-kb/: SKILL.md
src/alcove/profile_templates/managed-kb/skills/notes-search/: SKILL.md
src/alcove/profile_templates/managed-kb/skills/social_post_manager/: SKILL.md
src/alcove/profile_templates/workspace/skills/alcove-workspace/: SKILL.md
src/alcove/radars/: __init__.py  migration.py  models.py  module.py  pipeline.py  reporting.py  scoring.py
src/alcove/radars/presets/: sports-news.yml  stocks.yml  tech-news.yml  world-news.yml
src/alcove/radars/sources/: __init__.py  base.py  fixture.py  generic_html.py  github_trending.py  hackernews.py  rss.py
tests/: conftest.py  test_agent_quality_gate.py  test_ai_eval.py  test_ai_summary.py  test_apple_notes.py  test_application_usage.py  test_automations.py  test_blog_capture.py  test_blog_monitor.py  test_capability_payloads.py  test_chrome_bookmarks.py  test_cli.py  test_dashboard.py  test_dashboard_render_check.py  test_dashboard_search_index.py  test_doctor.py  test_entry_policy.py  test_entry_profiles.py  test_external_index.py  test_external_presentation.py  test_github_stars.py  test_global_state.py  test_health.py  test_home.py  test_inbox.py  test_installer.py  test_knowledge.py  test_linking.py  test_markdown.py  test_mcp_resources.py  test_mcp_server.py  test_mounts.py  test_notifications.py  test_okf.py  test_okf_catalog.py  test_paths.py  test_pins.py  test_projects.py  test_prompts.py  test_publishers.py  (+15 more)
