[project]
name = "alcove"
version = "0.1.0"
description = "Local-first personal information alcove for knowledge, pins, tasks, mounts, and agent-readable memory."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=3.4.4",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/OctopusGarage/alcove"
Repository = "https://github.com/OctopusGarage/alcove"
Issues = "https://github.com/OctopusGarage/alcove/issues"

[project.scripts]
alcove = "alcove.cli:entrypoint"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pip-audit>=2.10.0",
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=70"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = [
    "src/alcove/agent_quality_gate.py",
    "src/alcove/agent_workspaces.py",
    "src/alcove/ai_eval.py",
    "src/alcove/ai_eval_connectors.py",
    "src/alcove/ai_eval_mcp.py",
    "src/alcove/ai_eval_packet.py",
    "src/alcove/application.py",
    "src/alcove/application_base.py",
    "src/alcove/application_capabilities.py",
    "src/alcove/application_external.py",
    "src/alcove/application_global_home.py",
    "src/alcove/application_global_ideas.py",
    "src/alcove/application_global_planner.py",
    "src/alcove/application_global_prompts.py",
    "src/alcove/application_global_routines.py",
    "src/alcove/application_global_tasks.py",
    "src/alcove/application_inbox.py",
    "src/alcove/application_knowledge.py",
    "src/alcove/application_search.py",
    "src/alcove/application_system.py",
    "src/alcove/automations.py",
    "src/alcove/blog_monitor.py",
    "src/alcove/cli_dashboard.py",
    "src/alcove/cli_export.py",
    "src/alcove/cli_external.py",
    "src/alcove/cli_global_home.py",
    "src/alcove/cli_io.py",
    "src/alcove/cli_managed_kb.py",
    "src/alcove/cli_operations.py",
    "src/alcove/cli_planner.py",
    "src/alcove/cli_publish_parser.py",
    "src/alcove/cli_profiles.py",
    "src/alcove/cli_prompts.py",
    "src/alcove/cli_registry.py",
    "src/alcove/cli_search.py",
    "src/alcove/cli_serve.py",
    "src/alcove/cli_service.py",
    "src/alcove/cli_system.py",
    "src/alcove/cli_usage.py",
    "src/alcove/cli_workspace_parser.py",
    "src/alcove/cli_workspaces.py",
    "src/alcove/connector_sources.py",
    "src/alcove/connectors/fetch.py",
    "src/alcove/dashboard_activity.py",
    "src/alcove/dashboard_data_sources.py",
    "src/alcove/dashboard_knowledge.py",
    "src/alcove/dashboard_projection.py",
    "src/alcove/dashboard_server.py",
    "src/alcove/dashboard_snapshot.py",
    "src/alcove/dashboard_time.py",
    "src/alcove/external_index.py",
    "src/alcove/external_presentation.py",
    "src/alcove/external_resolver.py",
    "src/alcove/exporter.py",
    "src/alcove/health.py",
    "src/alcove/health_planner.py",
    "src/alcove/health_registry.py",
    "src/alcove/health_repairs.py",
    "src/alcove/health_types.py",
    "src/alcove/health_validation.py",
    "src/alcove/home.py",
    "src/alcove/markdown.py",
    "src/alcove/mcp_command_hints.py",
    "src/alcove/mcp_context.py",
    "src/alcove/mcp_direct_tools.py",
    "src/alcove/mcp_external_tools.py",
    "src/alcove/mcp_global_tools.py",
    "src/alcove/mcp_planner_tools.py",
    "src/alcove/mcp_registrar.py",
    "src/alcove/mcp_resources.py",
    "src/alcove/mcp_server.py",
    "src/alcove/mcp_toolsets.py",
    "src/alcove/notification_delivery.py",
    "src/alcove/planner_schedule.py",
    "src/alcove/profile_installer.py",
    "src/alcove/profile_packs.py",
    "src/alcove/projects.py",
    "src/alcove/prompt_audit.py",
    "src/alcove/prompt_composer.py",
    "src/alcove/prompt_curation.py",
    "src/alcove/prompt_ai_eval.py",
    "src/alcove/prompt_health.py",
    "src/alcove/prompt_proposals.py",
    "src/alcove/prompt_quality.py",
    "src/alcove/prompt_recommendation.py",
    "src/alcove/prompt_text.py",
    "src/alcove/prompts.py",
    "src/alcove/radars/__init__.py",
    "src/alcove/radars/models.py",
    "src/alcove/radars/module.py",
    "src/alcove/radars/pipeline.py",
    "src/alcove/radars/reporting.py",
    "src/alcove/radars/scoring.py",
    "src/alcove/radars/sources/__init__.py",
    "src/alcove/radars/sources/base.py",
    "src/alcove/radars/sources/fixture.py",
    "src/alcove/radars/sources/generic_html.py",
    "src/alcove/radars/sources/github_trending.py",
    "src/alcove/radars/sources/hackernews.py",
    "src/alcove/radars/sources/rss.py",
    "src/alcove/search_global.py",
    "src/alcove/search_query.py",
    "src/alcove/search_rows.py",
    "src/alcove/search_sources.py",
    "src/alcove/service.py",
    "src/alcove/workspace.py",
    "src/alcove/watchers.py",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70
